--- a/view/user_info.html
+++ b/view/user_info.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>轻悦文学网---个人中心</title> 
   <link rel="stylesheet" href="../css/main_ddfaca9e09.css" /> 
-  <link rel="stylesheet" href="../css/user_info_d16969853a.css" /> 
+  <link rel="stylesheet" href="../css/user_info_df78fecf96.css" /> 
   <link rel="stylesheet" href="../css/headerOrFooter_69d072ec5f.css" />
   <link rel="stylesheet" href="../css/Date_3e192c3277.css"  />
   <link rel="stylesheet" href="../css/font-awesome.min_7517ab4286.css"  />
@@ -22,12 +22,9 @@
     <div class="user_info_account">
      {{ userName }}
     </div> 
-    <div class="user_info_btn_qiandaoY " style="display: none;">
-     已签到
-    </div> 
-    <div class="user_info_btn_qiandao ">
-     签到
-    </div> 
+     <div class="user_info_btn_qiandao " @click="signFn" v-if="Sign">签到</div> 
+     <div class="user_info_btn_qiandaoY " v-else >已签到</div> 
+
     <div class="user_info_nva clear"> 
      <ul> 
       <li :class="active === 'info'?'active':''" @click="setShowFlagFn | debounce 100">
@@ -85,5 +82,5 @@
 <link rel="stylesheet" href="../css/cropper.min_7a1fe53434.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/user_info_7fb6b904e6.js"></script>
+<script src="../js/main/user_info_c57f21191a.js"></script>
 </html>
