--- a/css/catalog.css
+++ b/css/catalog.css
@@ -32,7 +32,7 @@
 		position: absolute;
 		top: 30px;
 		left: 15px;
-		padding-top:20px;
+		margin-top:20px;
 		border-radius: 4px;
 	}
 	.text {
@@ -479,7 +479,7 @@
 	}
 		.index .text_brief {
 			width: 555px;
-			height: 91px;
+			height: 111px;
 			border-bottom: 1px dashed #E1E1E1;
 			margin-top: 10px;
 		}	
@@ -489,7 +489,7 @@
 		    display: -webkit-box;
 		    -webkit-line-clamp: 5;
 		    -webkit-box-orient: vertical;
-		    height: 83px;
+		    height: 103px;
 		    font-size: 12px;
 		    line-height: 1.4;
 		    color: #666;
@@ -613,7 +613,7 @@
 			width: 770px;
 			min-height: 775px;
 			border: 1px solid #dddddd;
-			margin: 10px 0 0 15px;
+			margin: 25px 0 0 15px;
 			border-radius: 8px;
 		}
 		.index .text_Catalog ul {
@@ -990,11 +990,11 @@
 		 	position: relative;
 		 }
 
-		 .index .text_user img {
-		 	position: relative;
-		 	top: 5px;
-		 left: 15px;
-		     width: 54px;
+.text_user_img {
+		position: relative;
+		top: 5px;
+		left: 15px;
+		width: 54px;
     height: 54px;
     border-radius: 32px;
 		 }
@@ -1271,13 +1271,19 @@
 			outline: 0;
 			margin: 0 auto;
 		}
+		.reward img{
+		  position: absolute;
+		  right: 20px;
+		  top: 20px;
+		  cursor: pointer;
+		}
 		.reward .reward_Num {
 			width: 538px;
 			height: 200px;
       border: 1px dashed #DADADA;
 			border-radius: 4px;
 			margin: 0 auto;
-
+		
 		}
     .reward_Num label{
       margin-top: 15px;
@@ -1365,6 +1371,11 @@
     margin-left: 455px;
 			
 		}
+		.balala{
+		  color: #FF7C8C;
+		  margin-left: 10px  !important;
+		  cursor: pointer;
+		}
 		.reward_ture{
 		width: 330px;
     margin: 0 auto;
@@ -1391,7 +1402,7 @@
 		  width: 220px;
 		  height: 240px;
 		  background-color: white;   
-		   box-shadow: 0 3px 5px rgba(0,0,0,.3);
+		   box-shadow: 0 3px 5px 2px rgba(0,0,0,.3);
 		   border-radius: 6px;
 		   position: fixed;
 		   left: 45%;
