--- a/view/Space.html
+++ b/view/Space.html
@@ -5,8 +5,8 @@
 		<meta charset="UTF-8">
 		<title>个人空间</title>
     <link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-    <link rel="stylesheet" href="../css/catalog_4e20cd38b0.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter_69d072ec5f.css" />
+    <link rel="stylesheet" href="../css/catalog_a5fde5daf7.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
     <link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
     <link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
