--- a/view/welfare.html
+++ b/view/welfare.html
@@ -3,8 +3,8 @@
 <title>福利8</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
+<link rel="stylesheet" href="../css/main.css" />
+<link rel="stylesheet" href="../css/headerOrFooter.css" />
 <style>
   .welfare {
     max-width: 1200px;
@@ -40,5 +40,5 @@
 	</tr>
 </table>
 </body>
-<script src="../js/main/welfare_2a3d9c5188.js"></script>
+<script src="../js/main/welfare.js"></script>
 </html>
