--- a/view/user_info.html
+++ b/view/user_info.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" /> 
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>轻悦文学网---个人中心</title> 
-  <link rel="stylesheet" href="../css/main_ddfaca9e09.css" /> 
-  <link rel="stylesheet" href="../css/user_info_695efb2c2e.css" /> 
-  <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-  <link rel="stylesheet" href="../css/Date_3e192c3277.css"  />
-  <link rel="stylesheet" href="../css/font-awesome.min_7517ab4286.css"  />
+  <link rel="stylesheet" href="../css/main.css" /> 
+  <link rel="stylesheet" href="../css/user_info.css" /> 
+  <link rel="stylesheet" href="../css/headerOrFooter.css" />
+  <link rel="stylesheet" href="../css/Date.css"  />
+  <link rel="stylesheet" href="../css/font-awesome.min.css"  />
  </head> 
  <body id="app" v-show="bodyFlag" style="display: none;">
   <alert v-ref:vue-alert></alert>
@@ -78,10 +78,10 @@
 
 </body>
 <script type="text/javascript" src="../lib/jquery.min.js" ></script>
-<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
+<link rel="stylesheet" href="../css/wangEditor.min.css" />
 <script type="text/javascript" src="../lib/wangEditor.min.js" ></script>
-<link rel="stylesheet" href="../css/cropper.min_7a1fe53434.css" />
+<link rel="stylesheet" href="../css/cropper.min.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/user_info_f1410b5351.js"></script>
+<script src="../js/main/user_info.js"></script>
 </html>
