--- a/view/catalog.html
+++ b/view/catalog.html
@@ -295,7 +295,7 @@
 		</ul>
 	</div>
 				
-				<div class="list">
+				<!--<div class="list">
 					<h3>好人榜</h3>
 					<ul class="list_ul">
 						<li>周</li>
@@ -373,7 +373,7 @@
 						</div>
 					</div>
 					<div id="more"><a>查看更多</a></div>
-				</div>
+				</div>-->
 				<!--<div id="recommed">
 					<h3>同类作品推荐</h3>
 					<ul class="many">
@@ -437,7 +437,7 @@
 <link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_49fc7692dc.js"></script>
+<script src="../js/main/catalog_5b2d5f44c1.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
