--- a/view/catalog.html
+++ b/view/catalog.html
@@ -4,11 +4,11 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
-		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/catalog_a5fde5daf7.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
+		<link rel="stylesheet" href="../css/main.css" />
+		<link rel="stylesheet" href="../css/catalog.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter.css" />
+		<link rel="stylesheet" href="../css/LOgin.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>  
 	<body id="mask" id="app"
 	  v-show="bodyFlag" style="display: none;"    
@@ -43,7 +43,7 @@
               </li>
 							<li @click="setCollect()" v-if="!collect" ><span><img src="../img/zzzz.png"/ class="text_Collection"><p >收藏</p><i style="font-style: normal;display: none;">{{Collection}}</i></li>
 							<li @click="setCollect()" v-else ><span><img src="../img/zzzz.png"/ class="text_Collection"><p >已收藏</p><i style="font-style: normal;display: none;">{{Collection}}</i></li>
-							<li  v-on:click="rewardFn"><span><img src="../img/zzz.png"/ class="text_card"><p>打赏</p><i style="font-style: normal;display: none;">{{bookCopperCoins}}</i></li>
+							<li @click="rewardFn"><span><img src="../img/zzz.png"/ class="text_card"><p>打赏</p><i style="font-style: normal;display: none;">{{bookCopperCoins}}</i></li>
 							<li class="four">
 							  <span>
     							  <img src="../img/zzzzz.png"/ class="text_card">
@@ -434,10 +434,10 @@
 </div>
 
 <myfooter></myfooter>
-<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
+<link rel="stylesheet" href="../css/wangEditor.min.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_5b2d5f44c1.js"></script>
+<script src="../js/main/catalog.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
