--- a/view/class.html
+++ b/view/class.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>QC文学网-分类页</title>
-    <link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter.css" />
+		<link rel="stylesheet" href="../css/main.css" />
+		<link rel="stylesheet" href="../css/LOgin.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
   </head>
 <body class="class-body" id="app" v-show="bodyFlag" style="display: none;">
     <alert v-ref:vue-alert></alert>
@@ -117,6 +117,6 @@
     </div>
     
   <myfooter></myfooter>
-  <script src="../js/main/class_448db3dba0.js"></script>		
+  <script src="../js/main/class.js"></script>		
 </body>
 </html>
