--- a/view/read_book.html
+++ b/view/read_book.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>QC文学网-阅读页</title>
-	<link rel="stylesheet" href="../css/headerOrFooter.css" />
-	<link rel="stylesheet" href="../css/main.css" />
-	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
-	<link rel="stylesheet" href="../css/read_book.css" />
+	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
+	<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
+	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
+	<link rel="stylesheet" href="../css/read_book_91211fc24f.css" />
 </head>
 	<body  id="app" @keydown="keyDownFn"
 		v-bind:style="fixed === true? 'font-family: FontAwesome;overflow:hidden':'font-family: FontAwesome;'">
@@ -151,5 +151,5 @@
 	<div class="fa-expand"></div>
 
 	</body>
-<script src="../js/main/read_book.js"></script>
+<script src="../js/main/read_book_8014635f23.js"></script>
 </html>
