--- a/view/catalog.html
+++ b/view/catalog.html
@@ -4,11 +4,11 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
-		<link rel="stylesheet" href="../css/main.css" />
-		<link rel="stylesheet" href="../css/catalog.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter.css" />
-		<link rel="stylesheet" href="../css/LOgin.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
+		<link rel="stylesheet" href="../css/catalog_a5fde5daf7.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
+		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>  
 	<body id="mask" id="app"
 	  v-show="bodyFlag" style="display: none;"    
@@ -434,10 +434,10 @@
 </div>
 
 <myfooter></myfooter>
-<link rel="stylesheet" href="../css/wangEditor.min.css" />
+<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog.js"></script>
+<script src="../js/main/catalog_e5385b2854.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
