--- a/view/catalog.html
+++ b/view/catalog.html
@@ -231,14 +231,14 @@
     <form action="" method="get">请输入举报理由
     <br /><br /> 
     <ul>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp广告 </label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp刷屏 </label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp剧透 </label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp引战</label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp政治</label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp内容不相关</label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp人身攻击</label></li>
-      <li><label><input name="Fruit" type="radio" value="" />&nbsp其他</label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="oneFn" />&nbsp广告 </label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="towFn"/>&nbsp刷屏 </label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="thrFn"/>&nbsp剧透 </label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="fouFn"/>&nbsp引战</label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="fifFn"/>&nbsp政治</label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="sixFn"/>&nbsp内容不相关</label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="sveFn"/>&nbsp人身攻击</label></li>
+      <li><label><input name="Fruit" type="radio" value="" @click="nigFn"/>&nbsp其他</label></li>
     </ul>
 </form> 
 <div class="true" @click="reportDown">确定</div>
@@ -438,7 +438,7 @@
 <link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_5c3b12d6bf.js"></script>
+<script src="../js/main/catalog_feb50543e5.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
